src/StrumpackSparseSolver.h

/*!
 * Enumeration of STRUMPACK precisions, for both the scalars and the
 * integers.
  \ingroup Enumerations
 */
typedef enum
  {
   STRUMPACK_FLOAT,
   STRUMPACK_DOUBLE,
   STRUMPACK_FLOATCOMPLEX,
   STRUMPACK_DOUBLECOMPLEX,
   STRUMPACK_FLOAT_64,
   STRUMPACK_DOUBLE_64,
   STRUMPACK_FLOATCOMPLEX_64,
   STRUMPACK_DOUBLECOMPLEX_64
  } STRUMPACK_PRECISION;
/*!
 * Enumeration of STRUMPACK interfaces.
 * \ingroup Enumerations
 */
typedef enum
  {
   STRUMPACK_MT,        /*!< sequential/multithreaded interface    */
   STRUMPACK_MPI_DIST   /*!< fully distributed, MPI, interface     */
  } STRUMPACK_INTERFACE;
typedef struct {
  void* solver;
  STRUMPACK_PRECISION precision;
  STRUMPACK_INTERFACE interface;
} STRUMPACK_SparseSolver;
  int STRUMPACK_mc64job(STRUMPACK_SparseSolver S);
  void STRUMPACK_enable_HSS(STRUMPACK_SparseSolver S);
  void STRUMPACK_disable_HSS(STRUMPACK_SparseSolver S);
  void STRUMPACK_set_HSS_min_front_size(STRUMPACK_SparseSolver S, int size);
  void STRUMPACK_set_HSS_min_sep_size(STRUMPACK_SparseSolver S, int size);
  void STRUMPACK_set_HSS_max_rank(STRUMPACK_SparseSolver S, int max_rank);
  void STRUMPACK_set_HSS_leaf_size(STRUMPACK_SparseSolver S, int leaf_size);
  void STRUMPACK_set_HSS_rel_tol(STRUMPACK_SparseSolver S, double rctol);
  void STRUMPACK_set_HSS_abs_tol(STRUMPACK_SparseSolver S, double actol);
  int use_HSS(STRUMPACK_SparseSolver S);
  int STRUMPACK_HSS_min_front_size(STRUMPACK_SparseSolver S);
  int STRUMPACK_HSS_min_sep_size(STRUMPACK_SparseSolver S);
  int STRUMPACK_HSS_max_rank(STRUMPACK_SparseSolver S);
  int STRUMPACK_HSS_leaf_size(STRUMPACK_SparseSolver S);
  double STRUMPACK_HSS_rel_tol(STRUMPACK_SparseSolver S);
  double STRUMPACK_HSS_abs_tol(STRUMPACK_SparseSolver S);