src/fortran/strumpack.f90


function STRUMPACK_mc64job(s) &
bind(C, name="STRUMPACK_mc64job") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

subroutine STRUMPACK_enable_HSS(s) &
bind(C, name="STRUMPACK_enable_HSS")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_disable_HSS(s) &
bind(C, name="STRUMPACK_disable_HSS")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_set_HSS_min_front_size(s, size) &
bind(C, name="STRUMPACK_set_HSS_min_front_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_HSS_min_sep_size(s, size) &
bind(C, name="STRUMPACK_set_HSS_min_sep_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_HSS_max_rank(s, max_rank) &
bind(C, name="STRUMPACK_set_HSS_max_rank")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: max_rank
end subroutine

subroutine STRUMPACK_set_HSS_leaf_size(s, leaf_size) &
bind(C, name="STRUMPACK_set_HSS_leaf_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: leaf_size
end subroutine

subroutine STRUMPACK_set_HSS_rel_tol(s, rctol) &
bind(C, name="STRUMPACK_set_HSS_rel_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: rctol
end subroutine

subroutine STRUMPACK_set_HSS_abs_tol(s, actol) &
bind(C, name="STRUMPACK_set_HSS_abs_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: actol
end subroutine

function use_HSS(s) &
bind(C, name="use_HSS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_min_front_size(s) &
bind(C, name="STRUMPACK_HSS_min_front_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_min_sep_size(s) &
bind(C, name="STRUMPACK_HSS_min_sep_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_max_rank(s) &
bind(C, name="STRUMPACK_HSS_max_rank") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_leaf_size(s) &
bind(C, name="STRUMPACK_HSS_leaf_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_rel_tol(s) &
bind(C, name="STRUMPACK_HSS_rel_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_HSS_abs_tol(s) &
bind(C, name="STRUMPACK_HSS_abs_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

end interface


end module
